--- a/LLM_JSON_Extract.ipynb
+++ b/LLM_JSON_Extract.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM+3NVYNlFRoOGiZUvEVYdQ",
+      "authorship_tag": "ABX9TyOUG+w9qZPHtP6utxczICGo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -730,6 +730,7 @@
         "from langchain.chat_models import ChatOpenAI\n",
         "\n",
         "# Schema (this is in fact part of a \"functions\" object used for the LLM - compart to litellm !)\n",
+        "# Important: Allthough the schema is not explicitely defined as array, it will be converted by Langchain to a function parameter of type 'array'\n",
         "schema = {\n",
         "    \"properties\": {\n",
         "        \"name\": {\"type\": \"string\"},\n",
@@ -750,11 +751,11 @@
         "response = chain.run(inp)\n"
       ],
       "metadata": {
-        "id": "qTJU_vhDELR1",
-        "outputId": "571dbd5d-066f-4b0f-aba2-0dec5ed0ac52",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qTJU_vhDELR1",
+        "outputId": "571dbd5d-066f-4b0f-aba2-0dec5ed0ac52"
       },
       "execution_count": 15,
       "outputs": [
@@ -841,11 +842,11 @@
         "print(json.dumps(response, indent=4))"
       ],
       "metadata": {
-        "id": "97No7EUhHh2E",
-        "outputId": "3d07da46-cbde-408c-a7aa-3e5adfe8e210",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "97No7EUhHh2E",
+        "outputId": "3d07da46-cbde-408c-a7aa-3e5adfe8e210"
       },
       "execution_count": 16,
       "outputs": [
@@ -890,7 +891,7 @@
         "litellm.add_function_to_prompt = True\n",
         "\n",
         "# \"Schema\"\n",
-        "# Important: the property 'persons' is defined as array with 'items'. If not defined as array the LLM will only respond with the one person.\n",
+        "# Important: the property 'persons' must defined as array with 'items'. If not defined as array the LLM will only respond with the ONE person.\n",
         "\n",
         "functions = [\n",
         "    {\n",
@@ -918,8 +919,9 @@
         "inp = \"\"\"Alex is 5 feet tall. Claudia is 1 feet taller Alex and jumps higher than him. Claudia is a brunette and Alex is blonde.\"\"\"\n",
         "\n",
         "messages = [\n",
-        "    # Intro for Prompt from Langchain\n",
-        "    # Extract and save the relevant entities mentioned in the following passage together with their properties.\\n\\nOnly extract the properties mentioned in the 'information_extraction' function.\n",
+        "    # Intro text for Prompt from Langchain (may be used to optimize results?):\n",
+        "    # Extract and save the relevant entities mentioned in the following passage together with their properties.\\n\\n\n",
+        "    # Only extract the properties mentioned in the 'information_extraction' function.\n",
         "    # If a property is not present and is not required in the function parameters, do not include it in the output.\\n\\nPassage:\\n\n",
         "    {\"role\": \"user\", \"content\": inp}\n",
         "]\n",
@@ -939,11 +941,11 @@
         "  print('No function found')"
       ],
       "metadata": {
-        "id": "NUf7DJDeGYnD",
-        "outputId": "688f6ceb-9b6c-4011-eb5e-578fc452b53a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NUf7DJDeGYnD",
+        "outputId": "688f6ceb-9b6c-4011-eb5e-578fc452b53a"
       },
       "execution_count": 29,
       "outputs": [
