--- a/LLM_JSON_Extract.ipynb
+++ b/LLM_JSON_Extract.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOUG+w9qZPHtP6utxczICGo",
+      "authorship_tag": "ABX9TyMqTfGB4HkrH256rB2g361N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -706,7 +706,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 2. Data extraction by function calling"
+        "# 3. Data extraction by function calling"
       ],
       "metadata": {
         "id": "mT8kTj2zF_Nx"
@@ -715,9 +715,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 2.1 Function calling with Langchain\n",
+        "## 3.1 Function calling with Langchain\n",
         "\n",
-        "Langchain's \"create_extraction_chain\" uses Chat GPT's function calling under the hood:"
+        "Langchain's \"create_extraction_chain\" uses Chat GPT's function calling under the hood.\n",
+        "\n",
+        "See https://python.langchain.com/docs/use_cases/extraction#looking-under-the-hood"
       ],
       "metadata": {
         "id": "7Y_chvWQEJQh"
@@ -733,9 +735,9 @@
         "# Important: Allthough the schema is not explicitely defined as array, it will be converted by Langchain to a function parameter of type 'array'\n",
         "schema = {\n",
         "    \"properties\": {\n",
-        "        \"name\": {\"type\": \"string\"},\n",
-        "        \"height\": {\"type\": \"integer\"},\n",
-        "        \"hair_color\": {\"type\": \"string\"},\n",
+        "        \"name\": {\"type\": \"string\", \"description\": \"name of person\"},\n",
+        "        \"height\": {\"type\": \"integer\", \"description\": \"the height of the person\"},\n",
+        "        \"hair_color\": {\"type\": \"string\", \"description\": \"the color of the hair of the person\"},\n",
         "    },\n",
         "    \"required\": [\"name\", \"height\"],\n",
         "}\n",
@@ -755,9 +757,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qTJU_vhDELR1",
-        "outputId": "571dbd5d-066f-4b0f-aba2-0dec5ed0ac52"
+        "outputId": "b9440ed4-d666-4558-c50a-6b05cd5d28c0"
       },
-      "execution_count": 15,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -773,7 +775,7 @@
             "    \"Human: Extract and save the relevant entities mentioned in the following passage together with their properties.\\n\\nOnly extract the properties mentioned in the 'information_extraction' function.\\n\\nIf a property is not present and is not required in the function parameters, do not include it in the output.\\n\\nPassage:\\nAlex is 5 feet tall. Claudia is 1 feet taller Alex and jumps higher than him. Claudia is a brunette and Alex is blonde.\"\n",
             "  ]\n",
             "}\n",
-            "\u001b[36;1m\u001b[1;3m[llm/end]\u001b[0m \u001b[1m[1:chain:LLMChain > 2:llm:ChatOpenAI] [3.35s] Exiting LLM run with output:\n",
+            "\u001b[36;1m\u001b[1;3m[llm/end]\u001b[0m \u001b[1m[1:chain:LLMChain > 2:llm:ChatOpenAI] [3.11s] Exiting LLM run with output:\n",
             "\u001b[0m{\n",
             "  \"generations\": [\n",
             "    [\n",
@@ -817,7 +819,7 @@
             "  },\n",
             "  \"run\": null\n",
             "}\n",
-            "\u001b[36;1m\u001b[1;3m[chain/end]\u001b[0m \u001b[1m[1:chain:LLMChain] [3.35s] Exiting Chain run with output:\n",
+            "\u001b[36;1m\u001b[1;3m[chain/end]\u001b[0m \u001b[1m[1:chain:LLMChain] [3.11s] Exiting Chain run with output:\n",
             "\u001b[0m{\n",
             "  \"text\": [\n",
             "    {\n",
@@ -846,9 +848,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "97No7EUhHh2E",
-        "outputId": "3d07da46-cbde-408c-a7aa-3e5adfe8e210"
+        "outputId": "cc0efcef-e2ba-44bb-f6df-2d947f540773"
       },
-      "execution_count": 16,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -873,7 +875,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 2.2 Function Calling with litellm\n",
+        "## 3.2 Function calling with litellm\n",
         "\n",
         "Let's do the same in a native way:"
       ],
@@ -904,9 +906,9 @@
         "            \"type\": \"array\",\n",
         "            \"description\": \"properties of persons\",\n",
         "            \"items\": {\n",
-        "              \"name\": {\"type\": \"string\"},\n",
-        "              \"height\": {\"type\": \"integer\"},\n",
-        "              \"hair_color\": {\"type\": \"string\"},\n",
+        "              \"name\": {\"type\": \"string\", \"description\": \"name of person\"},\n",
+        "              \"height\": {\"type\": \"integer\", \"description\": \"the height of the person\"},\n",
+        "              \"hair_color\": {\"type\": \"string\", \"description\": \"the color of the hair of the person\"}\n",
         "            },\n",
         "        }\n",
         "      },\n",
@@ -945,15 +947,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NUf7DJDeGYnD",
-        "outputId": "688f6ceb-9b6c-4011-eb5e-578fc452b53a"
+        "outputId": "f859d740-3f40-4ab0-f9b4-35f5770a1f0e"
       },
-      "execution_count": 29,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "ModelResponse(id='chatcmpl-8bqo5WfOuMBENEwjhnrB0Fl4auARe', choices=[Choices(finish_reason='function_call', index=0, message=Message(content=None, role='assistant', function_call=FunctionCall(arguments='{\\n  \"persons\": [\\n    {\\n      \"name\": \"Alex\",\\n      \"height\": \"5 feet\",\\n      \"hair color\": \"blonde\"\\n    },\\n    {\\n      \"name\": \"Claudia\",\\n      \"height\": \"6 feet\",\\n      \"hair color\": \"brunette\"\\n    }\\n  ]\\n}', name='information_extraction')))], created=1704031816, model='gpt-3.5-turbo-0613', object='chat.completion', system_fingerprint=None, usage=Usage(completion_tokens=75, prompt_tokens=80, total_tokens=155), _response_ms=4152.129999999999)\n",
+            "ModelResponse(id='chatcmpl-8br98v1cVG2jyvjqSsqO9xONUBwJg', choices=[Choices(finish_reason='function_call', index=0, message=Message(content='[\\n  {\\n    \"name\": \"Alex\",\\n    \"height\": \"5 feet\",\\n    \"hair color\": \"blonde\"\\n  },\\n  {\\n    \"name\": \"Claudia\",\\n    \"height\": \"6 feet\",\\n    \"hair color\": \"brunette\"\\n  }\\n]', role='assistant', function_call=FunctionCall(arguments='{\\n  \"persons\": [\\n    {\\n      \"name\": \"Alex\",\\n      \"height\": \"5 feet\",\\n      \"hair color\": \"blonde\"\\n    },\\n    {\\n      \"name\": \"Claudia\",\\n      \"height\": \"6 feet\",\\n      \"hair color\": \"brunette\"\\n    }\\n  ]\\n}', name='information_extraction')))], created=1704033122, model='gpt-3.5-turbo-0613', object='chat.completion', system_fingerprint=None, usage=Usage(completion_tokens=137, prompt_tokens=80, total_tokens=217), _response_ms=5570.419)\n",
             "\n",
             "{\n",
             "  \"persons\": [\n",
