--- a/LLM_JSON_Extract.ipynb
+++ b/LLM_JSON_Extract.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMqTfGB4HkrH256rB2g361N",
+      "authorship_tag": "ABX9TyMpFj6TvQhfp35GwkCCh+KR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -702,6 +702,304 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 2. Data extraction by parsing (Langchain)\n",
+        "\n",
+        "see https://python.langchain.com/docs/use_cases/extraction#option-2-parsing"
+      ],
+      "metadata": {
+        "id": "egi1RBkuiVgG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from typing import Optional, Sequence\n",
+        "\n",
+        "from langchain.llms import OpenAI\n",
+        "from langchain.output_parsers import PydanticOutputParser\n",
+        "from langchain.prompts import (\n",
+        "    PromptTemplate,\n",
+        ")\n",
+        "from pydantic import BaseModel, Field, validator\n",
+        "\n",
+        "class Person(BaseModel):\n",
+        "    person_name: str\n",
+        "    person_height: int\n",
+        "    person_hair_color: str\n",
+        "    dog_breed: Optional[str]\n",
+        "    dog_name: Optional[str]\n",
+        "\n",
+        "class People(BaseModel):\n",
+        "    \"\"\"Identifying information about all people in a text.\"\"\"\n",
+        "    people: Sequence[Person]\n",
+        "\n",
+        "# Run\n",
+        "query = \"\"\"Alex is 5 feet tall. Claudia is 1 feet taller Alex and jumps higher than him. Claudia is a brunette and Alex is blonde.\"\"\"\n",
+        "\n",
+        "# Set up a parser + inject instructions into the prompt template.\n",
+        "parser = PydanticOutputParser(pydantic_object=People)\n",
+        "\n",
+        "# Prompt\n",
+        "prompt = PromptTemplate(\n",
+        "    template=\"Answer the user query.\\n{format_instructions}\\n{query}\\n\",\n",
+        "    input_variables=[\"query\"],\n",
+        "    partial_variables={\"format_instructions\": parser.get_format_instructions()},\n",
+        ")\n",
+        "\n",
+        "set_debug(True)\n",
+        "\n",
+        "# Run\n",
+        "_input = prompt.format_prompt(query=query)\n",
+        "model = OpenAI(temperature=0)\n",
+        "output = model(_input.to_string())\n",
+        "output_json = json.loads(output)\n",
+        "#output_obj = parser.parse(output)\n"
+      ],
+      "metadata": {
+        "id": "uYHXPtaDicRY",
+        "outputId": "4ddffeec-f93f-4730-f4b3-9d23d190e561",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[32;1m\u001b[1;3m[llm/start]\u001b[0m \u001b[1m[1:llm:OpenAI] Entering LLM run with input:\n",
+            "\u001b[0m{\n",
+            "  \"prompts\": [\n",
+            "    \"Answer the user query.\\nThe output should be formatted as a JSON instance that conforms to the JSON schema below.\\n\\nAs an example, for the schema {\\\"properties\\\": {\\\"foo\\\": {\\\"title\\\": \\\"Foo\\\", \\\"description\\\": \\\"a list of strings\\\", \\\"type\\\": \\\"array\\\", \\\"items\\\": {\\\"type\\\": \\\"string\\\"}}}, \\\"required\\\": [\\\"foo\\\"]}\\nthe object {\\\"foo\\\": [\\\"bar\\\", \\\"baz\\\"]} is a well-formatted instance of the schema. The object {\\\"properties\\\": {\\\"foo\\\": [\\\"bar\\\", \\\"baz\\\"]}} is not well-formatted.\\n\\nHere is the output schema:\\n```\\n{\\\"description\\\": \\\"Identifying information about all people in a text.\\\", \\\"properties\\\": {\\\"people\\\": {\\\"title\\\": \\\"People\\\", \\\"type\\\": \\\"array\\\", \\\"items\\\": {\\\"$ref\\\": \\\"#/definitions/Person\\\"}}}, \\\"required\\\": [\\\"people\\\"], \\\"definitions\\\": {\\\"Person\\\": {\\\"title\\\": \\\"Person\\\", \\\"type\\\": \\\"object\\\", \\\"properties\\\": {\\\"person_name\\\": {\\\"title\\\": \\\"Person Name\\\", \\\"type\\\": \\\"string\\\"}, \\\"person_height\\\": {\\\"title\\\": \\\"Person Height\\\", \\\"type\\\": \\\"integer\\\"}, \\\"person_hair_color\\\": {\\\"title\\\": \\\"Person Hair Color\\\", \\\"type\\\": \\\"string\\\"}, \\\"dog_breed\\\": {\\\"title\\\": \\\"Dog Breed\\\", \\\"type\\\": \\\"string\\\"}, \\\"dog_name\\\": {\\\"title\\\": \\\"Dog Name\\\", \\\"type\\\": \\\"string\\\"}}, \\\"required\\\": [\\\"person_name\\\", \\\"person_height\\\", \\\"person_hair_color\\\"]}}}\\n```\\nAlex is 5 feet tall. Claudia is 1 feet taller Alex and jumps higher than him. Claudia is a brunette and Alex is blonde.\"\n",
+            "  ]\n",
+            "}\n",
+            "\u001b[36;1m\u001b[1;3m[llm/end]\u001b[0m \u001b[1m[1:llm:OpenAI] [1.18s] Exiting LLM run with output:\n",
+            "\u001b[0m{\n",
+            "  \"generations\": [\n",
+            "    [\n",
+            "      {\n",
+            "        \"text\": \"\\n{\\n  \\\"people\\\": [\\n    {\\n      \\\"person_name\\\": \\\"Alex\\\",\\n      \\\"person_height\\\": 5,\\n      \\\"person_hair_color\\\": \\\"blonde\\\"\\n    },\\n    {\\n      \\\"person_name\\\": \\\"Claudia\\\",\\n      \\\"person_height\\\": 6,\\n      \\\"person_hair_color\\\": \\\"brunette\\\"\\n    }\\n  ]\\n}\",\n",
+            "        \"generation_info\": {\n",
+            "          \"finish_reason\": \"stop\",\n",
+            "          \"logprobs\": null\n",
+            "        },\n",
+            "        \"type\": \"Generation\"\n",
+            "      }\n",
+            "    ]\n",
+            "  ],\n",
+            "  \"llm_output\": {\n",
+            "    \"token_usage\": {\n",
+            "      \"completion_tokens\": 75,\n",
+            "      \"total_tokens\": 410,\n",
+            "      \"prompt_tokens\": 335\n",
+            "    },\n",
+            "    \"model_name\": \"gpt-3.5-turbo-instruct\"\n",
+            "  },\n",
+            "  \"run\": null\n",
+            "}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(json.dumps(output_json, indent=2))"
+      ],
+      "metadata": {
+        "id": "jYzs2hH3i2Wy",
+        "outputId": "104842a7-0068-41fc-b76f-0b0e26dfc5f7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{\n",
+            "  \"people\": [\n",
+            "    {\n",
+            "      \"person_name\": \"Alex\",\n",
+            "      \"person_height\": 5,\n",
+            "      \"person_hair_color\": \"blonde\"\n",
+            "    },\n",
+            "    {\n",
+            "      \"person_name\": \"Claudia\",\n",
+            "      \"person_height\": 6,\n",
+            "      \"person_hair_color\": \"brunette\"\n",
+            "    }\n",
+            "  ]\n",
+            "}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for x in _input.to_string().split('\\n'):\n",
+        "  print(textwrap.fill(x, 80))"
+      ],
+      "metadata": {
+        "id": "Lp4hHRPElJjj",
+        "outputId": "b79e28ad-e17c-4a5a-f5a2-a9110d19458a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Answer the user query.\n",
+            "The output should be formatted as a JSON instance that conforms to the JSON\n",
+            "schema below.\n",
+            "\n",
+            "As an example, for the schema {\"properties\": {\"foo\": {\"title\": \"Foo\",\n",
+            "\"description\": \"a list of strings\", \"type\": \"array\", \"items\": {\"type\":\n",
+            "\"string\"}}}, \"required\": [\"foo\"]}\n",
+            "the object {\"foo\": [\"bar\", \"baz\"]} is a well-formatted instance of the schema.\n",
+            "The object {\"properties\": {\"foo\": [\"bar\", \"baz\"]}} is not well-formatted.\n",
+            "\n",
+            "Here is the output schema:\n",
+            "```\n",
+            "{\"description\": \"Identifying information about all people in a text.\",\n",
+            "\"properties\": {\"people\": {\"title\": \"People\", \"type\": \"array\", \"items\": {\"$ref\":\n",
+            "\"#/definitions/Person\"}}}, \"required\": [\"people\"], \"definitions\": {\"Person\":\n",
+            "{\"title\": \"Person\", \"type\": \"object\", \"properties\": {\"person_name\": {\"title\":\n",
+            "\"Person Name\", \"type\": \"string\"}, \"person_height\": {\"title\": \"Person Height\",\n",
+            "\"type\": \"integer\"}, \"person_hair_color\": {\"title\": \"Person Hair Color\", \"type\":\n",
+            "\"string\"}, \"dog_breed\": {\"title\": \"Dog Breed\", \"type\": \"string\"}, \"dog_name\":\n",
+            "{\"title\": \"Dog Name\", \"type\": \"string\"}}, \"required\": [\"person_name\",\n",
+            "\"person_height\", \"person_hair_color\"]}}}\n",
+            "```\n",
+            "Alex is 5 feet tall. Claudia is 1 feet taller Alex and jumps higher than him.\n",
+            "Claudia is a brunette and Alex is blonde.\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Analyzing the prompt\n",
+        "\n",
+        "The prompt is generated based on the two Pydantic classes.\n",
+        "\n",
+        "**First prompt part (static)**\n",
+        "\n",
+        "````\n",
+        "Answer the user query.\n",
+        "The output should be formatted as a JSON instance that conforms to the JSON\n",
+        "schema below.\n",
+        "\n",
+        "As an example, for the schema\n",
+        "{\n",
+        "  \"properties\": {\n",
+        "    \"foo\": {\n",
+        "      \"title\": \"Foo\",\n",
+        "      \"description\": \"a list of strings\",\n",
+        "      \"type\": \"array\",\n",
+        "      \"items\": {\n",
+        "        \"type\": \"string\"\n",
+        "      }\n",
+        "    }\n",
+        "  },\n",
+        "  \"required\": [\n",
+        "    \"foo\"\n",
+        "  ]\n",
+        "}\n",
+        "the object {\"foo\": [\"bar\", \"baz\"]} is a well-formatted instance of the schema.\n",
+        "The object {\"properties\": {\"foo\": [\"bar\", \"baz\"]}} is not well-formatted.\n",
+        "````\n",
+        "\n",
+        "**Second prompt part (dynamic)**\n",
+        "\n",
+        "````\n",
+        "Here is the output schema:\n",
+        "```\n",
+        "{\n",
+        "  \"description\": \"Identifying information about all people in a text.\",\n",
+        "  \"properties\": {\n",
+        "    \"people\": {\n",
+        "      \"title\": \"People\",\n",
+        "      \"type\": \"array\",\n",
+        "      \"items\": {\n",
+        "        \"$ref\": \"#/definitions/Person\"\n",
+        "      }\n",
+        "    }\n",
+        "  },\n",
+        "  \"required\": [\n",
+        "    \"people\"\n",
+        "  ],\n",
+        "  \"definitions\": {\n",
+        "    \"Person\": {\n",
+        "      \"title\": \"Person\",\n",
+        "      \"type\": \"object\",\n",
+        "      \"properties\": {\n",
+        "        \"person_name\": {\n",
+        "          \"title\": \"Person Name\",\n",
+        "          \"type\": \"string\"\n",
+        "        },\n",
+        "        \"person_height\": {\n",
+        "          \"title\": \"Person Height\",\n",
+        "          \"type\": \"integer\"\n",
+        "        },\n",
+        "        \"person_hair_color\": {\n",
+        "          \"title\": \"Person Hair Color\",\n",
+        "          \"type\": \"string\"\n",
+        "        },\n",
+        "        \"dog_breed\": {\n",
+        "          \"title\": \"Dog Breed\",\n",
+        "          \"type\": \"string\"\n",
+        "        },\n",
+        "        \"dog_name\": {\n",
+        "          \"title\": \"Dog Name\",\n",
+        "          \"type\": \"string\"\n",
+        "        }\n",
+        "      },\n",
+        "      \"required\": [\n",
+        "        \"person_name\",\n",
+        "        \"person_height\",\n",
+        "        \"person_hair_color\"\n",
+        "      ]\n",
+        "    }\n",
+        "  }\n",
+        "}\n",
+        "```\n",
+        "Alex is 5 feet tall. Claudia is 1 feet taller Alex and jumps higher than him.\n",
+        "Claudia is a brunette and Alex is blonde.\n",
+        "````\n",
+        "\n",
+        "This part of the prompt is derived fromt the two Pydantic classes:\n",
+        "\n",
+        "````\n",
+        "class Person(BaseModel):\n",
+        "    person_name: str\n",
+        "    person_height: int\n",
+        "    person_hair_color: str\n",
+        "    dog_breed: Optional[str]\n",
+        "    dog_name: Optional[str]\n",
+        "\n",
+        "class People(BaseModel):\n",
+        "    \"\"\"Identifying information about all people in a text.\"\"\"\n",
+        "    people: Sequence[Person]\n",
+        "````"
+      ],
+      "metadata": {
+        "id": "75x17eNOllQr"
+      }
     },
     {
       "cell_type": "markdown",
