--- a/LLM_JSON_Extract.ipynb
+++ b/LLM_JSON_Extract.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMpFj6TvQhfp35GwkCCh+KR",
+      "authorship_tag": "ABX9TyNTFqVJ7zZnl8PEmUyOZTRy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,13 +78,15 @@
       "source": [
         "from litellm import completion\n",
         "import openai\n",
-        "os.environ[\"OPENAI_API_KEY\"] = CREDS['OpenAI']['v1']['credential'] # my key\n",
+        "os.environ[\"OPENAI_API_KEY\"] = CREDS['OpenAI']['v1']['credential']\n",
+        "os.environ['OPENAI_API_TOKEN'] = CREDS['OpenAI']['v1']['credential']\n",
+        "openai.api_key = CREDS['OpenAI']['v1']['credential']\n",
         "os.environ[\"TOGETHERAI_API_KEY\"] = CREDS['together-ai']['key']['credential']"
       ],
       "metadata": {
         "id": "4yK9LKzwnEzG"
       },
-      "execution_count": 3,
+      "execution_count": 70,
       "outputs": []
     },
     {
@@ -1004,7 +1006,132 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 3. Data extraction by function calling"
+        "# 3. Data extraction with Strict-JSON\n",
+        "\n",
+        "modified for litellm"
+      ],
+      "metadata": {
+        "id": "YQ8wVR359fJN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# source: https://github.com/tanchongmin/strictjson\n",
+        "# Notebook demo: https://github.com/tanchongmin/strictjson/blob/main/Strict_Text_(Strict_JSON_v2).ipynb\n",
+        "\n",
+        "import os\n",
+        "import openai\n",
+        "import json\n",
+        "import re\n",
+        "from openai import OpenAI\n",
+        "\n",
+        "def strict_text(system_prompt, user_prompt, output_format, delimiter = '###', model = 'gpt-3.5-turbo', temperature = 0, num_tries = 3, verbose = False):\n",
+        "    ''' Ensures that OpenAI will always adhere to the desired output json format.\n",
+        "    Uses rule-based iterative feedback to ask GPT to self-correct.\n",
+        "    Keeps trying up to num_tries it it does not. Returns empty json if unable to after num_tries iterations.'''\n",
+        "\n",
+        "    # start off with no error message\n",
+        "    error_msg = ''\n",
+        "\n",
+        "    for i in range(num_tries):\n",
+        "\n",
+        "        # make the output format keys with a unique identifier\n",
+        "        new_output_format = {}\n",
+        "        for key in output_format.keys():\n",
+        "            new_output_format[f'{delimiter}{key}{delimiter}'] = output_format[key]\n",
+        "        output_format_prompt = f'''\\nYou are to output the following in json format: {new_output_format}\n",
+        "You must use \"{delimiter}{{key}}{delimiter}\" to enclose the each {{key}}.'''\n",
+        "\n",
+        "        # Use litellm to get a response\n",
+        "\n",
+        "        response = completion(\n",
+        "          temperature = temperature,\n",
+        "          model=model,\n",
+        "          messages=[\n",
+        "            {\"role\": \"system\", \"content\": system_prompt + output_format_prompt + error_msg},\n",
+        "            {\"role\": \"user\", \"content\": str(user_prompt)}\n",
+        "          ]\n",
+        "        )\n",
+        "\n",
+        "\n",
+        "        res = response['choices'][0]['message']['content']\n",
+        "\n",
+        "        if verbose:\n",
+        "            print('System prompt:', system_prompt + output_format_prompt + error_msg)\n",
+        "            print('\\nUser prompt:', str(user_prompt))\n",
+        "            print('\\nGPT response:', res)\n",
+        "\n",
+        "        # try-catch block to ensure output format is adhered to\n",
+        "        try:\n",
+        "            # check key appears for each element in the output\n",
+        "            for key in new_output_format.keys():\n",
+        "                # if output field missing, raise an error\n",
+        "                if key not in res: raise Exception(f\"{key} not in json output\")\n",
+        "\n",
+        "            # if all is good, we then extract out the fields\n",
+        "            # Use regular expressions to extract keys and values\n",
+        "            pattern = fr\",*\\s*['|\\\"]{delimiter}([^#]*){delimiter}['|\\\"]: \"\n",
+        "\n",
+        "            matches = re.split(pattern, res[1:-1])\n",
+        "\n",
+        "            # remove null matches\n",
+        "            my_matches = [match for match in matches if match !='']\n",
+        "\n",
+        "            # remove the ' or \" from the value matches\n",
+        "            curated_matches = [match[1:-1] if match[0] in '\\'\"' else match for match in my_matches]\n",
+        "\n",
+        "            # create a dictionary\n",
+        "            end_dict = {}\n",
+        "            for i in range(0, len(curated_matches), 2):\n",
+        "                end_dict[curated_matches[i]] = curated_matches[i+1]\n",
+        "\n",
+        "            return end_dict\n",
+        "\n",
+        "        except Exception as e:\n",
+        "            error_msg = f\"\\n\\nResult: {res}\\n\\nError message: {str(e)}\\nYou must use \\\"{delimiter}{{key}}{delimiter}\\\" to enclose the each {{key}}.\"\n",
+        "            print(\"An exception occurred:\", str(e))\n",
+        "            print(\"Current invalid json format:\", res)\n",
+        "\n",
+        "    return {}"
+      ],
+      "metadata": {
+        "id": "wCGAWqpx9usB"
+      },
+      "execution_count": 79,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "res = strict_text(system_prompt = 'You are a classifier',\n",
+        "                    user_prompt = 'It is a beautiful day',\n",
+        "                    output_format = {\"Sentiment\": \"Type of Sentiment\",\n",
+        "                                    \"Tense\": \"Type of Tense\"})\n",
+        "print(res)"
+      ],
+      "metadata": {
+        "id": "9JI7B0ZO-Y65",
+        "outputId": "6f90887d-5328-4867-bacb-8086c2230836",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Sentiment': 'Positive', 'Tense': 'Present'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 4. Data extraction by function calling"
       ],
       "metadata": {
         "id": "mT8kTj2zF_Nx"
@@ -1013,7 +1140,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 3.1 Function calling with Langchain\n",
+        "## 4.1 Function calling with Langchain\n",
         "\n",
         "Langchain's \"create_extraction_chain\" uses Chat GPT's function calling under the hood.\n",
         "\n",
@@ -1173,7 +1300,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 3.2 Function calling with litellm\n",
+        "## 4.2 Function calling with litellm\n",
         "\n",
         "Let's do the same in a native way:"
       ],
