--- a/LLM_JSON_Extract.ipynb
+++ b/LLM_JSON_Extract.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNTFqVJ7zZnl8PEmUyOZTRy",
+      "authorship_tag": "ABX9TyPWzJsuHTgVGFpCZ/Aqy4xY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,9 +60,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FJi0IOSGm9dK",
-        "outputId": "67178f74-b279-4b31-c223-c42f24b0f56b"
+        "outputId": "ca172260-1772-42f9-8010-b99c4fe262ac"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "name": "stdout",
@@ -79,14 +79,12 @@
         "from litellm import completion\n",
         "import openai\n",
         "os.environ[\"OPENAI_API_KEY\"] = CREDS['OpenAI']['v1']['credential']\n",
-        "os.environ['OPENAI_API_TOKEN'] = CREDS['OpenAI']['v1']['credential']\n",
-        "openai.api_key = CREDS['OpenAI']['v1']['credential']\n",
         "os.environ[\"TOGETHERAI_API_KEY\"] = CREDS['together-ai']['key']['credential']"
       ],
       "metadata": {
         "id": "4yK9LKzwnEzG"
       },
-      "execution_count": 70,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -1008,7 +1006,8 @@
       "source": [
         "# 3. Data extraction with Strict-JSON\n",
         "\n",
-        "modified for litellm"
+        "- supports elements with lots of ' or \" or { or } or \\ or \\n, eg. code\n",
+        "- modified for litellm !\n"
       ],
       "metadata": {
         "id": "YQ8wVR359fJN"
@@ -1098,8 +1097,41 @@
       "metadata": {
         "id": "wCGAWqpx9usB"
       },
-      "execution_count": 79,
+      "execution_count": 5,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "res = strict_text(system_prompt = 'You are a data extractor.',\n",
+        "                    user_prompt = 'Extract the data of all persons: Alex is 5 feet tall. Claudia is 1 feet taller Alex and jumps higher than him. Claudia is a brunette and Alex is blonde.',\n",
+        "                    output_format = {\"person_name\": \"Name of person\",\n",
+        "                                      \"person_height\": \"height of person\",\n",
+        "                                      \"person_hair_color\": \"hair color of person\"})\n",
+        "\n",
+        "print(json.dumps(res, indent=2))"
+      ],
+      "metadata": {
+        "id": "UBxU0OcdC153",
+        "outputId": "58c9d587-46ba-43a4-ac9b-ae91696c37af",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{\n",
+            "  \"person_name\": \"Claudia\",\n",
+            "  \"person_height\": \"6 feet\",\n",
+            "  \"person_hair_color\": \"brunette\\\"\"\n",
+            "}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1108,22 +1140,58 @@
         "                    user_prompt = 'It is a beautiful day',\n",
         "                    output_format = {\"Sentiment\": \"Type of Sentiment\",\n",
         "                                    \"Tense\": \"Type of Tense\"})\n",
-        "print(res)"
+        "print(json.dumps(res, indent=2))"
       ],
       "metadata": {
-        "id": "9JI7B0ZO-Y65",
-        "outputId": "6f90887d-5328-4867-bacb-8086c2230836",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9JI7B0ZO-Y65",
+        "outputId": "6c6fa8fb-94c0-4e0a-e998-98239b7ac18b"
       },
-      "execution_count": 80,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'Sentiment': 'Positive', 'Tense': 'Present'}\n"
+            "{\n",
+            "  \"Sentiment\": \"Positive\",\n",
+            "  \"Tense\": \"Present\"\n",
+            "}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "res = strict_text(system_prompt = 'You are a code generator, generating code to fulfil a task',\n",
+        "                    user_prompt = 'Sum all elements in a given array p',\n",
+        "                    output_format = {\"Elaboration\": \"How you would do it\",\n",
+        "                                     \"C\": \"Code in C\",\n",
+        "                                    \"Python\": \"Code in Python\"})\n",
+        "\n",
+        "print(json.dumps(res, indent=2))"
+      ],
+      "metadata": {
+        "id": "Z0Vz4d_eB-1t",
+        "outputId": "6842ade6-11ee-4624-aa69-7651acda8c0a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{\n",
+            "  \"Elaboration\": \"To sum all elements in a given array, you can iterate through each element of the array and keep adding them to a running total.\",\n",
+            "  \"C\": \"int sum = 0;\\\\nfor (int i = 0; i < sizeof(p) / sizeof(p[0]); i++) {\\\\n    sum += p[i];\\\\n}\",\n",
+            "  \"Python\": \"sum = 0\\\\nfor num in p:\\\\n    sum += num\\\\n\"\n",
+            "}\n"
           ]
         }
       ]
