--- a/LLM_JSON_Extract.ipynb
+++ b/LLM_JSON_Extract.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPWzJsuHTgVGFpCZ/Aqy4xY",
+      "authorship_tag": "ABX9TyOvIYg7aGZFX0OnTUUrt92S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,24 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/aknip/Langchain-etc./blob/main/LLM_JSON_Extract.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Overview:\n",
+        "````\n",
+        "1. Extraction with KOR and Langchain\n",
+        "1.1. Extract and analyze KOR's prompt, feed it directly to LLM\n",
+        "2. Data extraction by parsing (Langchain)\n",
+        "3. Data extraction with Strict-JSON\n",
+        "4. Data extraction by function calling\n",
+        "4.1 Function calling with Langchain\n",
+        "4.2 Function calling with litellm\n",
+        "````"
+      ],
+      "metadata": {
+        "id": "Dhpx2Cd9XHak"
+      }
     },
     {
       "cell_type": "code",
@@ -1112,11 +1130,11 @@
         "print(json.dumps(res, indent=2))"
       ],
       "metadata": {
-        "id": "UBxU0OcdC153",
-        "outputId": "58c9d587-46ba-43a4-ac9b-ae91696c37af",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "UBxU0OcdC153",
+        "outputId": "58c9d587-46ba-43a4-ac9b-ae91696c37af"
       },
       "execution_count": 10,
       "outputs": [
@@ -1175,11 +1193,11 @@
         "print(json.dumps(res, indent=2))"
       ],
       "metadata": {
-        "id": "Z0Vz4d_eB-1t",
-        "outputId": "6842ade6-11ee-4624-aa69-7651acda8c0a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Z0Vz4d_eB-1t",
+        "outputId": "6842ade6-11ee-4624-aa69-7651acda8c0a"
       },
       "execution_count": 9,
       "outputs": [
